# rest-apis-bookstore

./: .gitignore  README.md
DOCS/: NODE_TO_DOTNET.md  NODE_TO_GO.md  NODE_TO_JAVA.md  NODE_TO_PYTHON.md  NODE_TO_RUST.md  postman-collection.json  postman_collection.json
dotnet/: Bookstore.http  Program.cs  README.md  dev.sh
dotnet/Bookstore/: bookstore.db
dotnet/Bookstore/Controllers/: BookController.cs
dotnet/Bookstore/Migrations/: 20250510102602_InitialCreate.cs
dotnet/Bookstore/Models/: book.cs
dotnet/Controllers/: BookController.cs  HealthController.cs
dotnet/Data/: BookstoreContext.cs
dotnet/Migrations/: 20250510102602_InitialCreate.Designer.cs  BookstoreContextModelSnapshot.cs
dotnet/Properties/: launchSettings.json
dotnet/Services/: BookService.cs
go-echo/: README.md  go.mod  main.go
go-fiber/: README.md  go.mod  main.go
javaspringboot/: README.md  pom.xml
javaspringboot/src/main/java/com/example/bookstore/: BookstoreApp.java
javaspringboot/src/main/java/com/example/bookstore/controller/: BookController.java  HealthController.java
javaspringboot/src/main/java/com/example/bookstore/entity/: Book.java
javaspringboot/src/main/java/com/example/bookstore/exception/: GlobalExceptionHandler.java
javaspringboot/src/main/resources/: application.properties
javaspringboot/src/test/java/com/example/bookstore/: BookControllerTest.java  BookServiceTest.java
nodejs/: README.md  package.json
nodejs-express/: README.md  package.json  server.js
nodejs-koa/: README.md  package.json  server.js
nodejs-nest/: README.md  package.json  pnpm-lock.yaml
nodejs-nest/src/: app.module.ts  book.entity.ts  books.controller.ts  books.service.ts  main.ts
python-blacksheep/: README.md  dev.sh  main.py  pyproject.toml
python-fastapi/: README.md  dev.sh  main.py  requirements.txt
python-flask/: README.md  app.py  dev.sh  pyproject.toml
rust-poem/: Cargo.toml  README.md
rust-poem/src/: main.rs
rust-rocket/: Cargo.toml  README.md  Rocket.toml
rust-rocket/src/: main.rs
rust-warp/: Cargo.toml  README.md
rust-warp/src/: main.rs
rust-wrap/: Cargo.toml  README.md
rust-wrap/src/: main.rs
(+2 files in other folders)
