[tool.poetry]
name = "python-flask-bookstore"
version = "0.1.0"
description = ""
authors = ["Gaurav Singh <gauravsinghaec@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-cors = "^6.0.1"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
