[package]
name = "rust-poem"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "2"
poem-openapi = { version = "2", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
