[package]
name = "rust-poem"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "2"
poem-openapi = { version = "2", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde_json = "1.0"

[dev-dependencies]
cargo-watch = "8.4"
